:building_construction: switching webpack with basic express server and socket

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
 		<title>Gummy</title>
 		<link rel="icon" href="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="styles/main.css" />
 	</head>
 	<body>
 		<div id="canvasContainer"></div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+		<script src="scripts/p5.min.js"></script>
+		<script src="scripts/main.js"></script>
 	</body>
 </html>
