:sparkles: worms can now get balls

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
 		<link rel="stylesheet" href="styles/main.css" />
 	</head>
 	<body>
+		<button class="playButton">play</button>
 		<div id="canvasContainer"></div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 		<script src="scripts/p5.min.js"></script>
+		<script src="scripts/worm.js"></script>
+		<script src="scripts/balls.js"></script>
 		<script src="scripts/main.js"></script>
 	</body>
 </html>
