--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<button class="playButton">play</button>
+		<button class="pauseButton">pause</button>
 		<div id="canvasContainer"></div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 		<script src="scripts/p5.min.js"></script>
