--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<button class="playButton">play</button>
 		<button class="pauseButton">pause</button>
 		<div id="canvasContainer"></div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+		<script src="scripts/socket.io.js"></script>
 		<script src="scripts/p5.min.js"></script>
 		<script src="scripts/worm.js"></script>
 		<script src="scripts/balls.js"></script>
