:sparkles: adding client-client worms collision

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<button class="playButton">play</button>
 		<button class="pauseButton">pause</button>
+		<div class="playerInfoContainer">Player :</div>
 		<div id="canvasContainer"></div>
 		<script src="scripts/socket.io.js"></script>
 		<script src="scripts/p5.min.js"></script>
