:sparkles: adding ready button and launcher

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
 		<link rel="stylesheet" href="styles/main.css" />
 	</head>
 	<body>
-		<button class="playButton">play</button>
+		<button class="readyButton">ready</button>
 		<button class="pauseButton">pause</button>
 		<div class="playerInfoContainer">Player :</div>
+		<div class="gameState">Not all players are ready</div>
 		<div id="canvasContainer"></div>
 		<script src="scripts/socket.io.js"></script>
 		<script src="scripts/p5.min.js"></script>
