:sparkles: adding reset button

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<button class="readyButton">ready</button>
 		<button class="pauseButton">pause</button>
+		<button class="resetButton">reset</button>
 		<div class="playerInfoContainer">Player :</div>
 		<div class="gameState">Not all players are ready</div>
 		<div id="canvasContainer"></div>
